--- a/apps/auth/.env
+++ b/apps/auth/.env
@@ -1,7 +1,7 @@
 MONGODB_URI ='mongodb://mongo:27017/dejewel'
 #JWT
-JWT_SECRET=ffjswerffk
-JWT_EXPIRATION=3600
+JWT_SECRET='ffjswerffk'
+JWT_EXPIRATION='3600'
 
 #PORT
 PORT=3001
