--- a/apps/auth/.env
+++ b/apps/auth/.env
@@ -1,7 +1,8 @@
-MONGODB_URI ='mongodb://mongo:27017/dejewel'
+MONGODB_URI =mongodb://localhost:27017/dejewel
 #JWT
-JWT_SECRET='ffjswerffk'
-JWT_EXPIRATION='3600'
+JWT_SECRET=ffjswerffkdjfjdjssashahaajaakajsj
+JWT_EXPIRATION=3600s
 
 #PORT
-PORT=3001
+HTTP_PORT=3001
+TCP_PORT=3002
