--- a/apps/reservations/.env
+++ b/apps/reservations/.env
@@ -1,3 +1,5 @@
-MONGODB_URI = 'mongodb://mongo:27017/dejewel'
-PORT=3007
+MONGODB_URI = mongodb://mongo:27017/dejewel
+PORT=3003
+AUTH_HOST=auth
+AUTH_PORT = 3002
 
