--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^10.1.0",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.0.0",
