--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "pino-http": "^8.3.3",
     "pino-pretty": "^10.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "stripe": "^12.16.0",
+    "webpack": "^5.88.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
