--- a/apps/reservations/.env
+++ b/apps/reservations/.env
@@ -1,6 +1,6 @@
 MONGODB_URI = mongodb://mongo:27017/dejewel
-PORT=3003
-PAYMENT_HOST=payments 
-PAYMENT_PORT=3019
+PORT=3000
+PAYMENTS_HOST=payments 
+PAYMENTS_PORT=3003
 AUTH_HOST=auth
 AUTH_PORT = 3002
