--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "test:e2e": "jest --config ./apps/dejewalapartment/test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.3.2",
+    "@nestjs/common": "^9.4.3",
+    "@nestjs/config": "^2.3.4",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/microservices": "^10.1.0",
+    "@nestjs/microservices": "^9.1.0",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/websockets": "^9.0.0",
     "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
